--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "name": "radarr-rss-filter",
   "private": true,
   "type": "module",
+  "bin": {
+    "radarr-rss-filter": "./bin/cli.js"
+  },
   "dependencies": {
     "fast-xml-parser": "5.2.5"
   },
