--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "main": "src",
   "name": "radarr-rss-filter",
   "repository": "https://github.com/Deathspike/radarr-rss-filter",
   "type": "module",
@@ -20,6 +19,7 @@
     "npm": ">= 10.0.0"
   },
   "scripts": {
+    "prepack": "tsc index.js --allowJs --declaration --emitDeclarationOnly --removeComments --strict",
     "prettier:check": "prettier --check .",
     "prettier:write": "prettier --write .",
     "test": "npm run prettier:check && npm run tsc:build",
